# ros2_mobile_manipulator

project_hazardous/robot_autonomy/: CMakeLists.txt  package.xml
project_hazardous/robot_autonomy/src/: pick_place.cpp  test_pose.cpp
project_hazardous/vision_server/: package.xml  setup.cfg
project_hazardous/vision_server/vision_server/: getpose_tf_server.py  object_tf.py
project_ware_house/robot_autonomy/: CMakeLists.txt
project_ware_house/vision_interface/msg/: ObjectPose.msg
project_ware_house/vision_server/launch/: vision_nodes.launch.py
project_ware_house/vision_server/vision_server/: getpose_tf_server.py  object_tf.py
robot_autonomy/: CMakeLists.txt
robot_autonomy/src/: pick_place_object.cpp  test_srv_pose.cpp
vision_interface/: CMakeLists.txt  package.xml
vision_interface/msg/: SinglePose.msg
vision_interface/srv/: GetPose.srv
vision_server/: setup.py
vision_server/vision_server/: color_object_locator.py  getpose_client.py  getpose_server.py  getpose_tf_server.py  object_tf.py  test_server_.py
